--- a/multipolar/index.html
+++ b/multipolar/index.html
@@ -50,7 +50,7 @@
             <h1 class="tag editorial-header__title">Multipolar</h1>
             <h2 class="editorial-header__subtitle">What is Multipolar?</h2>
             <p class="g-wide--pull-1">Multipolar is unconventional band of benevolent geniuses experimenting with radical ideas. </p>
-            <p class="editorial-header__excerpt g-wide--pull-1">We are a collaborative team of multidiciplinarians who lead innovations in public policy, digital media, emergent technologies, and human-centered civic systems. We also spend quite a bit of time thinking about satellites. Mostly, attack satellites.</p>
+            <p class="editorial-header__excerpt g-wide--pull-1">We are a collaborative team of multi-disciplinarians who lead innovations in public policy, digital media, emergent technologies, and human-centered civic systems. We also spend quite a bit of time thinking about satellites. Mostly, attack satellites.</p>
             <p class="editorial-header__excerpt g-wide--pull-1">We see a future with a seamless boundry between the physical world and digital world, and we are creating innovations to make this future a better place.</p>
             <p class="editorial-header__excerpt g-wide--pull-1">We work remotely from Vermont, but we very much enjoy traveling, meeting new people, and solving interesting problems.:) </p>
           
