--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<h1>Hello.</h1>
+<h1>Hello, I'm Brent</h1>
+</br>
+<h2>I mostly work on my projects and build things, but I also like to create art, play with the internet, and skateboard.</h2>
+<h2>I'll have more to share soon, but I'm trying to get some other things organized first.</h2>
+</br>
+<h1>...BDB</h1>
