--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
+<!doctype html>
+<html>
+<head>
+<title>Hello World</title>
+<meta name="description" content="home">
+<meta name="keywords" content="Brent, Brent D Burns, Brent Burns, Burns">
+</head>
+<body>
 <h1>Hello, I'm Brent</h1>
 </br>
-<h2>I mostly work on my projects and build things, but I also like to create art, play with the internet, and skateboard.</h2>
+<h2>You are likely to find me working on one of my projects or building things,</h2> 
+<h2>if not, I may be playing with the internet, skateboarding, or adventuring outdoors.</h2>
 <h2>I'll have more to share soon, but I'm trying to get some other things organized first.</h2>
 </br>
-<h1>...BDB</h1>
+<h2>...BDB</h2>
+</body>
+</html>
