formatting text update

--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
 <meta name="keywords" content="Brent, Brent D Burns, Brent Burns, Burns">
 </head>
 <body>
-  <h2>Hello World, I'm Brent</h2>
+  <h2>Howdy, I'm Brent</h2>
  <br>
-  <h2>You are likely to find me working on one of my projects or building things,</h2> 
-  <h2>if not, I may be playing with the internet, skateboarding, or adventuring outdoors.</h2>
+  <h2>You will probably find me working on one of my projects</h2> 
+  <h2>or building something.</h2> 
+  <h2>But, you may catch me playing with the internet, skateboarding,</h2>
+  <h2>or adventuring outdoors.</h2>
  <br>
-  <h2>I'll have more to share soon, but I'm trying to get some other things organized first.</h2>
+  <h2>I'll have more to share soon. I've been staying busy.</h2>
+ <br>
+  <h2>Onward and Upward,</h2>
  <br>
   <h2>...BDB</h2>
 </body>
