text update formatting

--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
 <body>
   <h2>Howdy, I'm Brent</h2>
  <br>
-  <h2>You will probably find me working on one of my projects</h2> 
-  <h2>or building something.</h2> 
-  <h2>But, you may catch me playing with the internet, skateboarding,</h2>
-  <h2>or adventuring outdoors.</h2>
+  <h2>You will likely find me working on one of my projects or building something.</h2> 
+  <h2>If not, I'm probably making art, skateboarding, or adventuring outdoors.</h2>
  <br>
   <h2>I'll have more to share soon. I've been staying busy.</h2>
  <br>
