--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!doctype html>
 <html>
 <head>
-<title>Hello World</title>
-<meta name="description" content="home">
+<title>Howdy!</title>
+<meta name="description" content="Homepage">
 <meta name="keywords" content="Brent, Brent D Burns, Brent Burns, Burns">
 </head>
 <body>
-  <h2>Howdy, I'm Brent</h2>
+ <br>
+  <h2>Howdy, I'm Brent.</h2>
  <br>
   <h2>You will likely find me working on one of my projects or building something.</h2> 
   <h2>If not, I'm probably making art, skateboarding, or adventuring.</h2>
