--- a/multipolar/index.html
+++ b/multipolar/index.html
@@ -35,7 +35,7 @@
   <body>
     <div class="container">
       <a name="editorial-header"></a>
-      <h2 class="subsection-title"><strong class="subsection-number">Multipolar Collective</h2>
+      <h2 class="subsection-title"><strong class="subsection-number">Multipolar</h2>
     </div>
 
     <div class="code-sample">
@@ -44,10 +44,10 @@
         <div class="editorial-header">
           <div class="container">
             <nav class="breadcrumbs">
-              <p> <a href="#ignore-click" class="breadcrumbs__link"> Avant-Garde Digital </a>  /  <a href="#ignore-click" class="breadcrumbs__link"> Underdog Strategy Group </a>  /  <a href="#ignore-click" class="breadcrumbs__link"> Actual R&D </a> / <a href="#ignore-click" class="breadcrumbs__link"> Potential Systems - Policy Innovation Lab </a></p>
+              <p> <a href="#ignore-click" class="breadcrumbs__link"> Avant-Garde Production </a>  /  <a href="#ignore-click" class="breadcrumbs__link"> Underdog Strategy</a>  /  <a href="#ignore-click" class="breadcrumbs__link"> Actual R&D </a> / <a href="#ignore-click" class="breadcrumbs__link"> Potential Systems</a></p>
             </nav>
 
-            <h1 class="tag editorial-header__title">Multipolar</h1>
+            <h1 class="tag editorial-header__title">r</h1>
             <h2 class="editorial-header__subtitle">What is Multipolar?</h2>
             <p class="g-wide--pull-1">Multipolar is unconventional band of benevolent geniuses experimenting with radical ideas. </p>
             <p class="editorial-header__excerpt g-wide--pull-1">We are a collaborative team of multi-disciplinarians who lead innovations in public policy, digital media, emergent technologies, and human-centered civic systems. We also spend quite a bit of time thinking about satellites. Mostly, attack satellites.</p>
