--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
  <br>
   <h2>Howdy, I'm Brent.</h2>
  <br>
-  <h2>You will likely find me working on one of my projects or building something.</h2> 
-  <h2>If not, I'm probably making art, skateboarding, or adventuring.</h2>
+  <h2>You can usually find me working on one of my projects or building something.</h2> 
+  <h2>If not, I'm probably organizing stuff, skateboarding, or adventuring.</h2>
  <br>
   <h2>I'll have more to share soon. I've been staying busy.</h2>
  <br>
