--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h2>Howdy, I'm Brent.</h2>
  <br>
   <h2>You can usually find me working on one of my projects or building something.</h2> 
-  <h2>If not, I'm probably writing, drawing, skateboarding, or playing.</h2>
+  <h2>If not, I'm probably writing, drawing, skateboarding, or playing with the internet.</h2>
  <br>
   <h2>I'll have more to share soon. I've been staying busy.</h2>
  <br>
