--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
 <meta name="keywords" content="Brent, Brent D Burns, Brent Burns, Burns">
 </head>
 <body>
- <br>
-  <h2>Howdy, I'm Brent.</h2>
- <br>
+ <p>
+ <h2>Howdy,</h2>
+ <p>
+  <h2>I'm Brent.</h2>
+ <p>
   <h2>You can usually find me working on one of my projects or building something.</h2> 
   <h2>If not, I'm probably writing, drawing, skateboarding, or playing with the internet.</h2>
- <br>
+ <p>
   <h2>I'll have more to share soon. I've been staying busy.</h2>
- <br>
+ <p>
   <h2>Onward and Upward,</h2>
-  <h2>...BDB</h2>
+ <p> 
+ <h2>...BDB</h2>
 </body>
 </html>
